--- a/package.json
+++ b/package.json
@@ -77,7 +77,9 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "core-js": "^2.0.0",
+    "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.18.1",
+    "node-uuid": "^1.4.8",
     "normalize.css": "^4.0.0",
     "prop-types": "^15.5.10",
     "react": "^15.0.0",
